--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,6 @@
       <%= render partial: 'layouts/home' %>
       <%= render partial: "layouts/footer" if check_current_page_show_this_part? %>
     <% end %>
+    <%= render partial: 'layouts/messengers' %>
   </body>
 </html>
