--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -49,19 +49,19 @@
     <div class="col-6 ps-3">
     <% if Insint.work?%>
       <% if !@template.new_record? %>
-        <div class="h6">Заказ инсалес и данные из инсалес</div>
+        <div class="h6">Заказ из инсалес</div>
         <div class="d-flex justify-content-beetwen align-items-center">
-        <%= form_with url: preview_ins_order_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
-          <%= form.select :insales_order_id, @ten_orders, include_blank: "Выберите заказ", class: "form-select" %>
-          <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
-        <% end %>
-        <%= form_with url: preview_ins_order_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
-          <%= form.text_field :insales_order_id, placeholder: "или введите Id заказа из инсалес", class: "form-control" %>
-          <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
-        <% end %>
+          <%= form_with url: preview_ins_order_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
+            <%= form.select :insales_order_id, @ten_orders, include_blank: "Выберите заказ", class: "form-select" %>
+            <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
+          <% end %>
+          <%= form_with url: preview_ins_order_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
+            <%= form.text_field :insales_order_id, placeholder: "введите Id заказа из инсалес", class: "form-control" %>
+            <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
+          <% end %>
         </div>
 
-        <div class="h6 mt-3">Заявки</div>
+        <div class="h6 mt-3">Заявки в сервисе</div>
         <div class="d-flex justify-content-beetwen align-items-center">
         <%= form_with url: preview_case_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
           <%= form.select :case_id, Mycase.order(id: :desc).limit(10).pluck(:id), include_blank: "Выберите заявку", class: "form-select" %>
@@ -82,7 +82,7 @@
         <%#end %>
 
 
-        <div class="mt-3">
+        <div class="mt-3 card">
           <div id="order-preview"></div>
           <div id="case-preview"></div>
           <%#<div id="restock-preview"></div>%>
