--- a/app/views/dashboards/services.html.erb
+++ b/app/views/dashboards/services.html.erb
@@ -1,3 +1,4 @@
+<div class="h5">Для email триггеров требуется настройка "почты для домена"</div>
 
 <div class="card-group gap-3 my-3">
   <div class="card">
