--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -47,52 +47,47 @@
     <% end %>
      </div>
     <div class="col-6 ps-3">
-    <% if Insint.work?%>
-      <% if !@template.new_record? %>
-        <div class="h6">Заказ из инсалес</div>
-        <div class="d-flex justify-content-beetwen align-items-center">
-          <%= form_with url: preview_ins_order_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
-            <%= form.select :insales_order_id, @ten_orders, include_blank: "Выберите заказ", class: "form-select" %>
-            <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
-          <% end %>
-          <%= form_with url: preview_ins_order_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
-            <%= form.text_field :insales_order_id, placeholder: "введите Id заказа из инсалес", class: "form-control" %>
-            <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
-          <% end %>
-        </div>
 
-        <div class="h6 mt-3">Заявки в сервисе</div>
-        <div class="d-flex justify-content-beetwen align-items-center">
-        <%= form_with url: preview_case_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
-          <%= form.select :case_id, Mycase.order(id: :desc).limit(10).pluck(:id), include_blank: "Выберите заявку", class: "form-select" %>
-          <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
-        <% end %>
-        <%= form_with url: preview_case_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
-          <%= form.text_field :case_id, placeholder: "или введите Id заявки", class: "form-control" %>
-          <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
-        <% end %>
-        </div>
-        <%# form_with url: preview_restock_templates_path, method: :get, class: "input-group mt-2", local: false do |form| %>
-          <%# form.select :client_id, Client.order(:id).limit(10).pluck(:name,:id), include_blank: "Выберите клиента", class: "form-select" %>
-          <%# button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%#Предпросмотр<%# end %>
-        <%#end %>
-        <%# form_with url: preview_restock_templates_path, method: :get, class: "input-group mt-2", local: false do |form| %>
-          <%# form.text_field :client_id, placeholder: "или введите Id клиента", class: "form-control" %>
-          <%# button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%#Предпросмотр<%# end %>
-        <%#end %>
-
-
-        <div class="mt-3 card">
-          <div id="order-preview"></div>
-          <div id="case-preview"></div>
-          <%#<div id="restock-preview"></div>%>
-        </div>
+      <% if @template.new_record? %>
+        <p>Сохраните шаблон и появится Предпросмотр</p>
       <% else %>
-        Сохраните шаблон и появится Предпросмотр
+        <div class="d-flex gap-4">
+          <div class="d-flex justify-content-beetwen align-items-center row">
+            <div class="h6 mt-3 col-12">Id заявки в сервисе</div>
+            <div class="col-6">
+              <%= form_with url: preview_case_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
+                <%= form.select :case_id, Mycase.order(id: :desc).limit(10).pluck(:id), include_blank: "Выберите", class: "form-select" %>
+                <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
+              <% end %>
+            </div>
+            <div class="col-6">
+              <%= form_with url: preview_case_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
+                <%= form.text_field :case_id, placeholder: "введите", class: "form-control" %>
+                <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
+              <% end %>
+            </div>
+          </div>          
+          <%=tag.div class:"d-flex justify-content-beetwen align-items-center row" do %>
+            <div class="h6 mt-3 col-12">Id заказа из инсалес</div>
+            <div class="col-6">
+            <%= form_with url: preview_case_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
+              <%= form.select :insales_order_id, @ten_orders, include_blank: "Выберите", class: "form-select" %>
+              <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
+            <% end %>
+            </div>
+            <div class="col-6">
+            <%= form_with url: preview_case_templates_path, method: :get, data: {turbo_stream: true}, class: "input-group", local: false do |form| %>
+              <%= form.text_field :insales_order_id, placeholder: "введите", class: "form-control" %>
+              <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %><%= play_icon%><% end %>
+            <% end %>
+            </div>
+          <% end if Insint.work? %>
+        </div>
+
+        <div id="case-preview" class="py-3"></div>
+
       <% end %> 
-      <%else%>
-        Не настроена интеграция Insales. Предпросмотр не работает
-      <% end %>
+
     </div>
     </div>
   </div>
