--- a/app/views/templates/_preview_case.html.erb
+++ b/app/views/templates/_preview_case.html.erb
@@ -4,16 +4,18 @@
 <% client_drop = Drops::Client.new(@client) %>
 <% case_drop = Drops::Mycase.new(@mycase) %>
 <% user_drop = Drops::User.new(current_user) %>
+<% order_drop = Drops::InsalesOrder.new(@order) %>
 
-
-<div class="card row mx-auto">
-    <pre>
-    <code>
-    <div><span class="h6">Тема письма:</span> <%= subject_template.render('mycase' => case_drop, 'client' => client_drop)%></div>
-    
-    <div class="h6">Содержание письма:</div> 
-    <%= content_template.render('mycase' => case_drop, 'client' => client_drop, 'user' => user_drop).html_safe%>
-    </code>
-    </pre>
+<div class="template-preview d-flex row">
+    <div class="subject px-0">
+        <b>Тема письма: </b><%= subject_template.render('order' => order_drop,'mycase' => case_drop, 'client' => client_drop)%>
+    </div>
+    <div class="content px-0">
+        <p><b>Содержание письма:</b></p>
+        <div>
+            <%= content_template.render('order' => order_drop, 'mycase' => case_drop, 'client' => client_drop, 'user' => user_drop).html_safe %>
+        </div>
+    </div>
 </div>
+
 
