--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row align-items-center mt-3 mb-3">
   <div class="col-2">
     <div class="h3">События</div>
-    <div class="h5">Для email триггеров требуется настройка "почты для домена"</div>
+    <div class="h6">Для email требуется настройка "почты для домена"</div>
   </div>
   <div class="col-8 px-0 row justify-content-center">
     <%= search_form_for @search, {class: 'form-inline col-10 pl-0 pr-0'} do |f| %>
