--- a/app/views/home/_price_section.html.erb
+++ b/app/views/home/_price_section.html.erb
@@ -4,7 +4,7 @@
         <div class="card text-center ml-0 mr-0">
             <div class="card-header text-white" style="background-color: #0e0906;">Бесплатно</div>
             <div class="card-body">
-                <h4 class="card-title ">30 дней</h4>
+                <h4 class="card-title" style="margin: 21px 0 14px;">30 дней</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">консультации</li>
                     <li class="list-group-item">бесплатно 30 дней</li>
@@ -28,6 +28,22 @@
                 </ul>
             </div>
             <div class="card-body">
+                <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg'%>
+            </div>
+        </div>
+        <div class="card text-center ml-0 mr-0">
+            <div class="position-absolute top-0 end-0 translate-middle badge rounded-pill text-bg-danger p-2">-40%</div>
+            <div class="card-header text-black" style="background-color: #feefcf;">Стандарт 3</div>
+            <div class="card-body">
+                <h6 class="text-decoration-line-through text-danger text-opacity-75">3600 ₽/мес</h6>
+                <h4 class="card-title">2160 ₽/мес</h4>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">скидка 10% (6480 ₽)</li>
+                    <li class="list-group-item">оплата за 3 мес</li>
+                    <li class="list-group-item">полный функционал</li>
+                </ul>
+            </div>
+            <div class="card-body">
                 <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-our-color btn-lg'%>
             </div>
         </div>
@@ -35,10 +51,10 @@
             <div class="position-absolute top-0 end-0 translate-middle badge rounded-pill text-bg-danger p-2">-40%</div>
             <div class="card-header text-black" style="background-color: #feefcf;">Стандарт 6</div>
             <div class="card-body">
-                <h6 class="text-decoration-line-through text-danger text-opacity-75">3600 ₽/мес</h6>
-                <h4 class="card-title">2160 ₽/мес</h4>
+                <h6 class="text-decoration-line-through text-danger text-opacity-75">3200 ₽/мес</h6>
+                <h4 class="card-title">1920 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">скидка 10% (12960 ₽)</li>
+                    <li class="list-group-item">скидка 20% (11520 ₽)</li>
                     <li class="list-group-item">оплата за 6 мес</li>
                     <li class="list-group-item">полный функционал</li>
                 </ul>
@@ -51,10 +67,10 @@
             <div class="position-absolute top-0 end-0 translate-middle badge rounded-pill text-bg-danger p-2">-40%</div>
             <div class="card-header text-black" style="background-color: #feefcf;">Стандарт 12</div>
             <div class="card-body">
-                <h6 class="text-decoration-line-through text-danger text-opacity-75">3200 ₽/мес</h6>
-                <h4 class="card-title">1920 ₽/мес</h4>
+                <h6 class="text-decoration-line-through text-danger text-opacity-75">2800 ₽/мес</h6>
+                <h4 class="card-title">1680 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">скидка 20% (23040 ₽)</li>
+                    <li class="list-group-item">скидка 30% (20160 ₽)</li>
                     <li class="list-group-item">оплата за 12 мес</li>
                     <li class="list-group-item">полный функционал</li>
                 </ul>
