--- a/app/views/email_setups/index.html.erb
+++ b/app/views/email_setups/index.html.erb
@@ -39,6 +39,11 @@
 </table>
 </div>
 
+<% if @email_setups.count.positive? %>
+<div class="alert notice-info" role="alert">
+  Если при отправке письма на gmail вы получаете письмо с ошибкой 550-5.7.26 - отправитель не прошел аутентификацию Gmail и в вашем домене отсутствуют реализации аутентификации электронной почты, то вам следует проверить настройки домена. Начиная с 1 февраля 2024 года Google постепенно вводит новые правила для отправителей электронной почты. Эти правила требуют от отправителей массовых рассылок включить DMARC, SPF и DKIM для своих доменов.
+</div>
+<% end %>
 
 
 <%= render 'shared/paginate', object: @email_setups %>
