--- a/app/views/dashboards/services.html.erb
+++ b/app/views/dashboards/services.html.erb
@@ -1,5 +1,7 @@
 <div class="h5">Для email триггеров требуется настройка "почты для домена"</div>
-
+<div class="h5">
+  в полях клиента можно передавать <a href="https://yandex.ru/support/metrica/objects/get-client-id.html" target="_blank">Yandex client id</a>. Наше поле - ya_client_id.
+</div>
 <div class="card-group gap-3 my-3">
   <div class="card">
     <div class="card-header">
