--- a/app/views/mycases/_form.html.erb
+++ b/app/views/mycases/_form.html.erb
@@ -1,15 +1,15 @@
 <div class="col-12 h3 mt-3 mb-3"><%= page_title %></div>
-<%= form_with(model: @mycase, local: true) do |f| %>
-  <%= render 'shared/errors', object: @mycase %>
+<%= form_with(model: mycase) do |f| %>
+  <%= render 'shared/errors', object: mycase %>
 
   <div class="row">
     <div class="col-3">
       <%= f.label :status, class: "form-label" %>
-      <%= f.select :status, Mycase::STATUS, {include_blank: false}, { class: "form-select", disabled: @mycase.casetype == 'restock' || @mycase.casetype == 'preorder' ? true : false} %>
+      <%= f.select :status, Mycase::STATUS, {include_blank: false}, { class: "form-select", disabled: mycase.casetype == 'restock' || mycase.casetype == 'preorder' ? true : false} %>
       <%= f.label :number, class: "form-label mt-1" %>
       <%= f.text_field :number, disabled: true, class: "form-control" %>
       <%= f.label :client_id, class: "form-label mt-1" %>
-      <%= f.select :client_id, Client.collection_for_select(f.object.client_id).pluck(:name, :id), {include_blank: false}, { class: "form-select", disabled: true} %>
+      <%= f.select :client_id, Client.collection_for_select(f.object.client_id).pluck(:name, :id), {include_blank: false}, { class: "form-select", disabled: f.object.client_id ? false : true} %>
       <%= f.label :casetype, class: "form-label mt-1" %>
       <%= f.select :casetype,  Mycase::CASETYPE, {include_blank: false}, { class: "form-select"} %>
       <%= f.label :insales_custom_status_title, class: "form-label mt-1" %>
@@ -18,6 +18,12 @@
       <%= f.text_field :insales_financial_status, disabled: true, class: "form-control" %>
     </div>
     <div class="col-9 ps-3">
+       <%= f.fields_for :lines, mycase.lines do |ff| %>
+        <%= ff.hidden_field :product_id, value: ff.object.product_id %>
+        <%= ff.hidden_field :variant_id, value: ff.object.variant_id %>
+        <%= ff.hidden_field :quantity, value: ff.object.quantity %>
+        <%= ff.hidden_field :price, value: ff.object.price %>
+      <% end %>
       <div class="table-responsive">
         <table class="table" id="line-table">
           <thead>
@@ -27,11 +33,11 @@
               <th>Вариант</th>
               <th>Кол-во</th>
               <th>Цена</th>
-              <%= tag.th 'Статус позиции' if @mycase.casetype == 'restock' %>
+              <%= tag.th 'Статус позиции' if mycase.casetype == 'restock' %>
             </tr>
           </thead>
           <tbody>
-            <% @mycase.lines.each do |line| %>
+            <% mycase.lines.each do |line| %>
               <tr class="line_<%= line.id %>" style="vertical-align: middle;">
                 <td class="p-0" style="width:100px;vertical-align: middle;">
                   <%= image_block(line.product.image_link)%>
@@ -41,7 +47,7 @@
                     <br>Артикул: <%= line.variant.sku %></td>
                 <td><%= line.quantity %></td>
                 <td><%= line.price %></td>
-                <%= tag.td(line.variant.restocks.where(mycase_id: @mycase.id).first&.status, class: 'text-center') if @mycase.casetype == 'restock' %>
+                <%= tag.td(line.variant.restocks.where(mycase_id: mycase.id).first&.status, class: 'text-center') if mycase.casetype == 'restock' %>
               </tr>
             <% end %>
           </tbody>
