--- a/app/views/mycases/edit.html.erb
+++ b/app/views/mycases/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render 'form', case: @case, page_title: "Редактирование" %>
+<%= render 'form', mycase: @mycase, page_title: "Редактирование" %>
