--- a/app/views/mycases/new.html.erb
+++ b/app/views/mycases/new.html.erb
@@ -1,4 +1,3 @@
-
-<%= render 'form', case: @case, page_title: "New Case" %>
-
-
+<%= turbo_frame_tag "offcanvas_wrap" do %>
+  <%= render 'form', mycase: @mycase, page_title: "Новая заявка" %>
+<% end %>
