--- a/app/views/dashboards/services.html.erb
+++ b/app/views/dashboards/services.html.erb
@@ -1,8 +1,8 @@
-<div class="h5">Для email триггеров требуется настройка "почты для домена"</div>
-<div class="h5">
-  в полях клиента можно передавать <a href="https://yandex.ru/support/metrica/objects/get-client-id.html" target="_blank">Yandex client id</a>. Наше поле - ya_client_id.
+<div class="">Для email триггеров требуется настройка "почты для домена"</div>
+<div class="">
+  В полях клиента можно передавать <a href="https://yandex.ru/support/metrica/objects/get-client-id.html" target="_blank">Yandex client id</a>. Наше поле - ya_client_id.
 </div>
-<div class="card-group gap-3 my-3">
+<div class="card-group my-3">
   <div class="card">
     <div class="card-header">
       <div class="h4 card-title">Избранное <small>(favorite)</small></div>
@@ -35,8 +35,8 @@ data-favorite-product="{{ product.id }}"</pre>
     </div>
     <div class="card-footer">
       <div class="f-flex flex-between">
-        <label>Состояние:</label>
-        <span>вкл/выкл</span>
+        <label></label>
+        <span></span>
       </div>
     </div>
   </div>
@@ -56,13 +56,13 @@ data-favorite-product="{{ product.id }}"</pre>
     </div>
     <div class="card-footer">
       <div class="f-flex flex-between">
-        <label>Состояние:</label>
-        <span>вкл/выкл</span>
+        <label></label>
+        <span></span>
       </div>
     </div>
   </div>
 </div>
-<div class="card-group gap-3 mb-3">
+<div class="card-group mb-3">
   <div class="card">
     <div class="card-header">
       <div class="h4 card-title">Предзаказ <small>(preorder)</small></div>
@@ -81,8 +81,8 @@ data-favorite-product="{{ product.id }}"</pre>
     </div>
     <div class="card-footer">
       <div class="f-flex flex-between">
-        <label>Состояние:</label>
-        <span>вкл/выкл</span>
+        <label></label>
+        <span></span>
       </div>
     </div>
   </div>
@@ -129,13 +129,13 @@ data-favorite-product="{{ product.id }}"</pre>
     </div>
     <div class="card-footer">
       <div class="f-flex flex-between">
-        <label>Состояние:</label>
-        <span>вкл/выкл</span>
+        <label></label>
+        <span></span>
       </div>
     </div>
   </div>
 </div>
-<div class="card-group gap-3">
+<div class="card-group">
   <div class="card">
     <div class="card-header">
       <div class="h4 card-title">Заказы <small>(order)</small></div>
@@ -151,8 +151,8 @@ data-favorite-product="{{ product.id }}"</pre>
     </div>
     <div class="card-footer">
       <div class="f-flex flex-between">
-        <label>Состояние:</label>
-        <span>вкл/выкл</span>
+        <label></label>
+        <span></span>
       </div>
     </div>
   </div>
@@ -171,8 +171,8 @@ data-favorite-product="{{ product.id }}"</pre>
     </div>
     <div class="card-footer">
       <div class="f-flex flex-between">
-        <label>Состояние:</label>
-        <span>вкл/выкл</span>
+        <label></label>
+        <span></span>
       </div>
     </div>
   </div>
