--- a/app/views/discounts/_code_example.html.erb
+++ b/app/views/discounts/_code_example.html.erb
@@ -30,7 +30,7 @@
       "marking_codes": null,
       "accessory_lines": [],
       "external_variant_id": null,
-      "collections_titlies": ["Женская одежда", "Мужская одежда", "Каталог", "Товары на главной"]
+      "colls": ["Женская одежда", "Мужская одежда", "Каталог", "Товары на главной"]
     },
     {
       "id": null,
@@ -60,7 +60,7 @@
       "marking_codes": null,
       "accessory_lines": [],
       "external_variant_id": null,
-      "collections_titlies": ["Мужская одежда", "Сканеры штрих-кодов"]
+      "colls": ["Мужская одежда", "Сканеры штрих-кодов"]
     },
     {
       "id": null,
@@ -90,7 +90,7 @@
       "marking_codes": null,
       "accessory_lines": [],
       "external_variant_id": null,
-      "collections_titlies": ["Жакеты", "Каталог"]
+      "colls": ["Жакеты", "Каталог"]
     }
   ],
   "order_changes": [],
@@ -363,6 +363,7 @@
   },
   "responsible_user_id": null,
   "total_profit": "46500.0",
+  "lower_price": 1500.0,
   "insint": {
     "id": null,
     "created_at": null,
