--- a/app/views/discounts/_form.html.erb
+++ b/app/views/discounts/_form.html.erb
@@ -56,9 +56,10 @@
   </div>
   <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
     <p>В результате проверок всех условий должна остаться фраза - do_work. Она должна присутствовать один раз в коде liquid.</p>
+    <p>Если прдполагается скидка на в  размере самого дешёвого товара в корзине, то в результате проверок всех условий должна остаться фраза - do_work_with_lower_price. Она должна присутствовать один раз в коде liquid.</p>
     <p>Примеры правил:</p>
      <code><pre>{% if order_lines.size == 2 %}do_work{% else %}false{% endif %}</pre></code> 
-     <code><pre>{% if order_lines.size == 3 %}do_work{% else %}false{% endif %}</pre></code>
+     <code><pre>{% if order_lines.size == 3 %}do_work_with_lower_price{% else %}false{% endif %}</pre></code>
      <code><pre>
 {% assign muj_coll = "" %}
 {% for item in order_lines %}
@@ -68,7 +69,7 @@
 {% endfor %}
 {% assign muj_coll_array = muj_coll | remove_first: "," | split: "," %}
 {% if order_lines.size == muj_coll_array.size and muj_coll_array.size == 2 %}do_work{%else%}false{% endif %}</pre></code>
-<p>Песочница где можно проверять условия - <a href="https://liquidjs.com/playground.html" target="_blank"></a>
+<p><a href="https://liquidjs.com/playground.html" target="_blank">Песочница</a> где можно проверять условия -
  В качестве данных Пример данных</p>
   </div>
     <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab">
